# mom

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ci_build.py  mom.root.yml
.github/workflows/: build.yml  cov.yml  test.yml
json-schema/: mom.json  yamis.json
src/: builtin_commands.rs  builtin_commands_test.rs  cli.rs  cli_test.rs  errors.rs  errors_test.rs  lib.rs  main.rs  mom_file_paths.rs  mom_file_paths_test.rs  mom_files.rs  mom_files_container.rs  mom_files_container_test.rs  mom_files_test.rs  print_utils.rs  print_utils_test.rs  serde_common.rs  tasks.rs  tasks_test.rs  tera.rs  tera_test.rs  utils.rs  utils_test.rs
tests/: end_to_end_test.rs  test_cli.rs
