[package]
name = "mom-task"
version = "1.2.0"
edition = "2021"
license = "MIT"
authors = ["Adrian Martinez <adrianmrit@gmail.com>"]
description = "Task runner for teams and individuals."
homepage = "https://github.com/adrianmrit/mom/"
repository = "https://github.com/adrianmrit/mom/"
readme = "README.md"
keywords = ["task", "build", "subcommand", "runner", "command"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"
cfg-if = "1.0"
colored = "2.0"
serde_yaml = "0.9"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
petgraph = "0.6"
ctrlc = "3.2"
dotenv-parser = "0.1"
clap = { version = "4.2", features = ["derive", "cargo"] }
indexmap = "1.9"
directories = { version = "5.0" }
md-5 = "0.10"  # Used for caching
tera = "1.18" # Used for templating
shellexpand = "3.1.0"
rpassword = "7.2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"

[[bin]]
name = "mom"
path = "src/main.rs"

[features]
default = ["runtime"]
runtime = []
